--- a/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
@@ -387,20 +387,20 @@ ed esci dall'inquadratura"</string>
     <string name="simple_mode_title">Modalità semplice</string>
     <string name="pref_settings_mode">Modalità fotocamera</string>
     <string name="pref_video_captrue_ability_title">Modalità cattura</string>
-    <string name="find_mecard_qrcode">Trova QR code biglietto</string>
-    <string name="find_wechat_qrcode">Trova QR code WeChat</string>
-    <string name="find_market_qrcode">Trova QR code market</string>
-    <string name="find_web_qrcode">Trova QR code sito web</string>
-    <string name="find_other_qrcode">Trova QR code</string>
-    <string name="find_qq_qrcode">Trova un QR code QQ</string>
-    <string name="find_wifi_qrcode">Trova un QR code Wi-Fi</string>
-    <string name="see_qrcode_detals">Dettagli QR code</string>
-    <string name="scan_qrcode">Scansiona QR code</string>
+    <string name="find_mecard_qrcode">Trova codice QR biglietto</string>
+    <string name="find_wechat_qrcode">Trova codice QR WeChat</string>
+    <string name="find_market_qrcode">Trova codice QR market</string>
+    <string name="find_web_qrcode">Trova codice QR sito web</string>
+    <string name="find_other_qrcode">Trova codice QR</string>
+    <string name="find_qq_qrcode">Trova un codice QR QQ</string>
+    <string name="find_wifi_qrcode">Trova un codice QR Wi-Fi</string>
+    <string name="see_qrcode_detals">Dettagli codice QR</string>
+    <string name="scan_qrcode">Scansiona codice QR</string>
     <string name="app_details">Dettagli app:</string>
     <string name="website_details">"Dettagli sito: "</string>
     <string name="contact_details">Dettagli contatto:</string>
     <string name="wechat_details">Dettagli WeChat:</string>
-    <string name="qr_code_details">"dettagli QR code: "</string>
+    <string name="qr_code_details">"dettagli codice QR: "</string>
     <string name="import_contact">Importa contatto</string>
     <string name="secure_access_web_url">Accesso web sicuro</string>
     <string name="download_by_browser">Scarica con il browser</string>
@@ -421,8 +421,8 @@ ed esci dall'inquadratura"</string>
     <string name="contact_birthday">Compleanno</string>
     <string name="contact_note">Note</string>
     <string name="success_message_import_from_account">Importato correttamente</string>
-    <string name="web_url_warning">Il sito web aperto con il QR code potrebbe essere pericoloso, il browser MIUI eseguirà un controllo del QR code per te.</string>
-    <string name="web_url_apk_warning">"Il QR code selezionato contiene un'applicazione potenzialmente dannosa, cerca quasta applicazione all'interno del PlayStore"</string>
+    <string name="web_url_warning">Il sito web aperto con il codice QR potrebbe essere pericoloso, il browser MIUI eseguirà un controllo del codice QR per te.</string>
+    <string name="web_url_apk_warning">"Il codice QR selezionato contiene un'applicazione potenzialmente dannosa, cerca quasta applicazione all'interno del PlayStore"</string>
     <string name="wifi_ssid">SSID:</string>
     <string name="wifi_pwd">Password:</string>
     <string name="wifi_security">Sicurezza:</string>
@@ -434,7 +434,7 @@ ed esci dall'inquadratura"</string>
     <string name="wifi_warning">Verifica la sicurezza prima di collegarti a questa rete Wi-Fi</string>
     <string name="cloud_album_details">Dettagli album cloud:</string>
     <string name="visit_cloud_album">Apri album cloud</string>
-    <string name="find_cloud_album">Trova un album cloud con QR code</string>
+    <string name="find_cloud_album">Trova un album cloud con codice QR</string>
     <string name="wifi_connecting">Connessione Wi-Fi…</string>
     <string name="wifi_open_fail">Impossibile aprire connessione Wi-Fi</string>
     <string name="wifi_connect_fail">Connessione scaduta o errore della rete Wi-Fi</string>
@@ -444,7 +444,7 @@ ed esci dall'inquadratura"</string>
     <string name="pref_camera_watermark_title">Aggiungi data</string>
     <string name="pref_camera_watermark_entry_off">Disattivato</string>
     <string name="pref_camera_watermark_entry_on">Attivato</string>
-    <string name="pref_scan_qrcode_title">Scansiona QR Code</string>
+    <string name="pref_scan_qrcode_title">Scansiona codice QR</string>
     <string name="pref_scan_qrcode_entry_off">Disattivato</string>
     <string name="pref_scan_qrcode_entry_on">Attivato</string>
     <string name="pref_manual_exposure_title">Esposizione manuale</string>
