--- a/Italian/main/BarcodeScanner.apk/res/values-it/strings.xml
+++ b/Italian/main/BarcodeScanner.apk/res/values-it/strings.xml
@@ -31,7 +31,7 @@
     <string name="url_is_unsafety">Questo sito potrebbe mettere a rischio la sicurezza dei tuoi dati.</string>
     <string name="url_is_phish">Questo sito potrebbe eseguire phishing dei dati (attenzione!).</string>
     <string name="url_is_unknown">Non è possibile confermare la sicurezza di questo sito. Continua a tuo rischio.</string>
-    <string name="scan_qrcode">Scansiona QR code</string>
+    <string name="scan_qrcode">Scansiona codice QR</string>
     <string name="app_details">Dettagli app:</string>
     <string name="website_details">Dettagli sito:</string>
     <string name="contact_details">Dettagli contatto:</string>
