--- a/Italian/main/MiBand.apk/res/values-it/strings.xml
+++ b/Italian/main/MiBand.apk/res/values-it/strings.xml
@@ -405,8 +405,8 @@ apri Impostazioni -> Sicurezza e Privacy -> Sicurezza schermo"</string>
     <string name="bind_weixin_title">"Dopo aver cliccato su \"connetti a Wechat\" sarà creato un codice QR nel tuo album, scansiona il codice QR in WeChat e quindi potrai connetterti "</string>
     <string name="step1">Passo 1) </string>
     <string name="step2">Passo 2) </string>
-    <string name="bind_weixin_tips_1">Tocca Crea QR code e salva nella Galleria.</string>
-    <string name="bind_weixin_tips_2">"Tocca Apri Wechat, poi Scansiona QR code e seleziona l'immagine dall'Album."</string>
+    <string name="bind_weixin_tips_1">Tocca Crea codice QR e salva nella Galleria.</string>
+    <string name="bind_weixin_tips_2">"Tocca Apri Wechat, poi Scansiona codice QR e seleziona l'immagine dall'Album."</string>
     <string name="bind_weixin_now">Sto generando il QR-Code, attendi…</string>
     <string name="bind_weixin_failed">Associazione fallita, riprova!</string>
     <string name="bind_weixin_succ">Associazione completata, puoi usare WeChat</string>
@@ -475,7 +475,7 @@ Non ti fermare, continua così!"</string>
     <string name="dynamic_pull_pull_to_sync">Trascina per sincronizzare</string>
     <string name="dynamic_pull_update_report">Aggiornati %s dati</string>
     <string name="dynamic_pull_sync_error">Impossibile sincronizzare, trascina per aggiornare.</string>
-    <string name="bind_weixin_qrcode_name">MiBand QR code</string>
+    <string name="bind_weixin_qrcode_name">MiBand codice QR</string>
     <string name="mili_exit_login_info_unbind">"Uscendo il telefono perderà l'associazione con MiBand"</string>
     <string name="mili_exit_login_info_unlock">Tutte le funzioni non saranno più disponibili.</string>
     <string name="mili_exit_login_info_continue_tip">"Confermare l'uscita con ESCI"</string>
