--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -841,7 +841,7 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="msim_sim_radio_off">Disattivata</string>
     <string name="msim_enable_sim">Attivata</string>
     <string name="msim_info_editor_name">Modifica nome SIM</string>
-    <string name="msim_info_editor_number">MOdifica numero SIM</string>
+    <string name="msim_info_editor_number">Modifica numero SIM</string>
     <string name="msim_info_editor_set_name_error">Si è verificato un errore, riprova più tardi</string>
     <string name="msim_apn_not_set">Non impostato</string>
     <string name="msim_set_sub_not_supported_phone_in_call">Non puoi impostarlo durante una chiamata</string>
@@ -850,7 +850,7 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="msim_mode_progress_deactivating_message">Disattivazione</string>
     <string name="msim_pref_title_voice">Chiamata</string>
     <string name="msim_pref_title_data">Internet</string>
-    <string name="msim_not_set_summary">Non impsotato</string>
+    <string name="msim_not_set_summary">Non impostato</string>
     <string name="select_voice_call_sim">Prego scegliere</string>
     <string name="general_setting">Impostazioni</string>
     <string name="call_record_setting">Impostazioni registrazione chiamata</string>
