--- a/Italian/main/MiKey.apk/res/values-it/strings.xml
+++ b/Italian/main/MiKey.apk/res/values-it/strings.xml
@@ -17,14 +17,35 @@
     <string name="open_flash_error">Impossibile accendere il flash</string>
     <string name="close_flash_error">Impossibile spegnere il flash</string>
     <string name="scan_fail">Impossibile eseguire la scansione!</string>
-    <string name="vcard_prompt">Impossibile creare il nuovo contatto perchè manca il nome</string>
+    <string name="vcard_prompt">Impossibile creare il nuovo contatto perché manca il nome</string>
     <string name="copy_succeed">Copia eseguita correttamente</string>
     <string name="fail_generate_barcode">Impossibile generare il codice a barre o il codice QR</string>
     <string name="scan_result">Risultati scansione</string>
     <string name="flash_lable">Flash</string>
     <string name="picker_lable">Galleria</string>
-
-    <string name="long_click">Tieni premuto</string>
+    <string name="setting_key_silent">key_silent</string>
+    <string name="setting_key_mode_silent_open">key_silent_default</string>
+    <string name="setting_key_mode_dust_cap">key_dust_cap</string>
+    <string name="default_toolbox_items">.FlashlightAction,.AudioRecorderAction,.CapturePhotoInstantAction,0</string>
+    <string name="default_toolbar_items">.CapturePhotoAction,.FlashlightAction,.AudioRecorderAction,0,0,0</string>
+    <string name="app_name">MiKey</string>
+    <string name="tab_mikey">MiKey</string>
+    <string name="tab_mikey_sprite">Wizard</string>
+    <string name="notify_title_sprite">Wizard</string>
+    <string name="notify_content_sprite">Premi sul lato destro per uscire</string>
+    <string name="notify_ticker_sprite">Wizard in esecuzione</string>
+    <string name="chooser_dust_cap">MiKey (protezione polvere)</string>
+    <string name="click_type_0">Premi</string>
+    <string name="click_type_1">Premi 1 volta</string>
+    <string name="click_type_2">Premi 2 volte</string>
+    <string name="click_type_3">Premi 3 volte</string>
+    <string name="click_type_4">Premi 4 volte</string>
+    <string name="click_type_5">Premi 5 volte</string>
+    <string name="click_type_6">Premi 6 volte</string>
+    <string name="click_type_7">Premi 7 volte</string>
+    <string name="click_type_8">Premi 8 volte</string>
+    <string name="click_type_9">Premi 9 volte</string>
+    <string name="click_type_10">Premi 10 volte</string>
     <string name="action_open_flashlight">Torcia</string>
     <string name="action_open_other_app">Applicazioni</string>
     <string name="action_open_mi_route">Lista dei dispositivi</string>
@@ -40,8 +61,10 @@
     <string name="action_zero_volume">Silenzioso</string>
     <string name="action_open_sound_recorder">Registra suono</string>
     <string name="action_open_or_close_motion">Rotazione Attiva/Disattiva</string>
-    <string name="action_open_camera360_capture">Effetti fotocamera Camera360</string>
-    <string name="action_open_camera360_edit">Modifica le foto Camera360</string>
+    <string name="toast_open">Apri</string>
+    <string name="toast_close">Chiudi</string>
+    <string name="super_difficult_click">Difficoltà pressione</string>
+    <string name="click_count_union">" volte"</string>
     <string name="action_open_wechat">WeChat</string>
     <string name="action_share_to_wechat">Condividi con WeChat</string>
     <string name="action_share_to_moment">Condividi momenti con WeChat</string>
@@ -49,13 +72,27 @@
     <string name="action_send_text_message">Invia messaggio</string>
     <string name="action_share_to_miliao">MiTalk</string>
     <string name="action_share_to_miliao_wall">Bacheca MiTalk</string>
+    <string name="toggle_wifi">WiFi</string>
+    <string name="toggle_bluetooth">Bluetooth</string>
+    <string name="toggle_shake">Vibrazione</string>
+    <string name="toggle_ring">Suoneria</string>
+    <string name="toggle_gps">GPS</string>
+    <string name="toggle_data">Dati</string>
+    <string name="toggle_sleep">Blocca</string>
+    <string name="toggle_bright">Luminosità</string>
+    <string name="toggle_flight">Aereo</string>
+    <string name="toggle_nfc">NFC</string>
+    <string name="action_open_camera360_capture">Effetti fotocamera Camera360</string>
+    <string name="action_open_camera360_edit">Modifica le foto Camera360</string>
+    <string name="action_kuaidi">Chiamata rapida</string>
     <string name="action_toolbox">Strumenti</string>
     <string name="action_phone">Telefono</string>
-    <string name="category_app">Applicazioni</string>
-    <string name="category_system_settings">Impostazioni</string>
+    <string name="category_0">Applicazione</string>
+    <string name="category_1">Impostazioni</string>
+    <string name="category_2">Tasto</string>
     <string name="action_close">Chiudi</string>
     <string name="delete_confirm">Sei sicuro di voler cancellare questa azione?</string>
-    <string name="delete_gesture">Eliminare le guestures pulsanti per Mikey?</string>
+    <string name="delete_gesture">Eliminare le gesture per Mikey?</string>
     <string name="recommend">Consigliate</string>
     <string name="add">Aggiungi</string>
     <string name="running_notification">Xiaomi MiKey</string>
@@ -77,12 +114,46 @@
     <string name="clean_memory">Cancella memoria</string>
     <string name="close_all">Chiudi tutto</string>
     <string name="sms_sent_done">Messaggio inviato</string>
-
+    <string name="cn_0">0</string>
+    <string name="cn_1">1</string>
+    <string name="cn_2">2</string>
+    <string name="cn_3">3</string>
+    <string name="cn_4">4</string>
+    <string name="cn_5">5</string>
+    <string name="cn_6">6</string>
+    <string name="cn_7">7</string>
+    <string name="cn_8">8</string>
+    <string name="cn_9">9</string>
+    <string name="cn_10">10</string>
+    <string name="cn_100">100</string>
+    <string name="cn_1000">1000</string>
+    <string name="cn_10000">10000</string>
+    <string name="cn_100000000">100000000</string>
     <string name="splash_tip">Collega MiKey</string>
     <string name="default_action_title">Azione predefinita</string>
     <string name="action_home">Home</string>
+    <string name="action_key_direction">Direzione</string>
+    <string name="action_key_enter">Invio</string>
+    <string name="action_key_back">Indietro</string>
+    <string name="action_key_back_long">Invio (long pres)</string>
+    <string name="action_key_home">Home</string>
+    <string name="action_key_home_long">Home (long press)）</string>
+    <string name="action_key_menu">Menu</string>
+    <string name="action_key_menu_long">Menu (long press)</string>
+    <string name="action_key_power">Accensione</string>
+    <string name="action_key_power_long">Accensione (long press)</string>
+    <string name="action_key_play_pause">Play/Pausa</string>
+    <string name="action_key_play_next">Successivo</string>
+    <string name="action_key_play_prev">Precedente</string>
+    <string name="action_key_call">Chiama</string>
+    <string name="action_key_end_call">TErmina chiamata</string>
     <string name="message_photo_end">Immagini salvate</string>
     <string name="select_camera">Selezionare fotocamera</string>
+    <string name="select_direction">Selezionare la direzione</string>
+    <string name="key_direction_up">Su</string>
+    <string name="key_direction_down">Giù</string>
+    <string name="key_direction_left">Sinistra</string>
+    <string name="key_direction_right">Destra</string>
     <string name="front_camera">Fotocamera frontale</string>
     <string name="back_camera">Fotocamera posteriore</string>
     <string name="write_pic_fail">Impossibile salvare immagine!</string>
@@ -98,9 +169,9 @@ Ora puoi personalizzare i tuoi strumenti!
 
 Attiva la barra degli strumenti, in ogni caso
 dal cellulare puoi scorrere lo slide in basso per usarla"</string>
-    <string name="task_title_prefix">Passo n.</string>
+    <string name="task_title_prefix">%1$s : %2$s</string>
     <string name="setting_feedback">Reattività MiKey</string>
-    <string name="setting_speed_desc">"Una velocità maggiore garanstice maggiore reattività, ma può diminuire il tasso di riconoscimenti corretti Diminuendo la velocità aumenterai il tasso di riconoscimenti corretti ma diminuirà il tempo di risposta. "</string>
+    <string name="setting_speed_desc">"Una velocità maggiore garantisce maggiore reattività, ma può diminuire il tasso di riconoscimenti corretti Diminuendo la velocità aumenterai il tasso di riconoscimenti corretti ma diminuirà il tempo di risposta. "</string>
     <string name="setting_speed_slow">Più lenta</string>
     <string name="setting_speed_quick">Più veloce</string>
     <string name="setting_vibrate_desc">Il telefono vibrerà per notificare quando la funzione verrà eseguita</string>
@@ -117,6 +188,9 @@ dal cellulare puoi scorrere lo slide in basso per usarla"</string>
 più nitide, ma allunga il tempo impiegato 
 per eseguire lo scatto"</string>
     <string name="toolbox_outer_desc">Selezionare più funzioni esistenti</string>
+    <string name="setting_speed_max_time">1000</string>
+    <string name="setting_speed_middle_time">500ms</string>
+    <string name="setting_speed_min_time">0</string>
     <string name="notification_recorder_start">Inizia la registrazione…</string>
     <string name="notification_control_stop">Interrompi</string>
     <string name="notification_control_play">Riproduci</string>
@@ -124,12 +198,17 @@ per eseguire lo scatto"</string>
     <string name="sdcard">Scheda SD</string>
     <string name="showSlip">Mostra un popup</string>
     <string name="close_recorder">Chiudi registratore</string>
-
+    <string name="file_delimiter">／</string>
     <string name="silent_mode_tip_main">Tasto silenzioso disabilitato</string>
     <string name="update_message">Aggiornato!</string>
-
+    <string name="silent_mode_tip_sub">Puoi attivarlo nelle Impostazioni</string>
     <string name="test_user_entry">Test</string>
     <string name="goto_update">Aggiorna</string>
+    <string name="unsupport_title">Questa funzione non è supportata</string>
+    <string name="unsupport_content">"Si prega di eseguire l'aggiornamento all'ultima versione MIUI "developer" per il supporto di questa funzione."</string>
+    <string name="action_baidusearch">Baidu</string>
+    <string name="select_baidusearch">Baidu</string>
+    <string name="select_baiduvoicesearch">Ricerca vocale Baidu</string>
     <string name="faq_title">Domande su MiKey</string>
     <string name="faq_speed_title">Azione sconosciuta?</string>
     <string name="faq_speed_text">Differenti dispositivi mobili reagiscono in modo differenti, per questo la velocità può essere regolata nelle impostazioni. Cerca il ritmo adatto per il tuo telefono.</string>
@@ -141,14 +220,23 @@ per eseguire lo scatto"</string>
     <string name="faq_misreq_text">"Se il controllo della musica nella schermata di blocco non risponde, ferma la musica, rimuovi l'app dalla RAM, riconnetti il Mikey e riavvia l'app MiKey. Siamo a conoscenza di questo bug e stiamo lavorando per risolverlo."</string>
     <string name="faq_comp_title">Con quali telefoni è compatibile?</string>
     <string name="faq_comp_text">"Oltre agli Xiaomi, tutti i telefono di ultima generazione sono in grado di utilizzarlo. Per via di u tasto X aggiuntivo su alcuni Xiaomi, il MiKey supporta solo i sistemi MIUI-V5. E' inoltre necessario scaricare l'applicazione Mikey"</string>
-    <string name="faq_voice_title">Non si sente nessun suono in chiamata ?</string>
+    <string name="faq_voice_title">Non senti nessun suono in chiamata?</string>
     <string name="faq_voice_text">Togli e rimetti il MiKey ed accertati di aver scelto MiKey</string>
-    <string name="faq_slow_title">La reazione ai click è troppo lenta ?</string>
+    <string name="faq_slow_title">La reazione ai click è troppo lenta?</string>
     <string name="faq_slow_text">Il tempo di click può essere impostato a 0, questo dovrebbe essere sufficiente per</string>
     <string name="faq_quni_title">Quanto dura il MiKey?</string>
     <string name="faq_quni_text">Dovrebbe sopportare più di 30 mila pressioni, dipende però da come viene usato</string>
-    <string name="faq_stat_title">Perché il numero dei click è a zero ？</string>
+    <string name="faq_stat_title">Perché il numero dei click è a zero?</string>
     <string name="faq_stat_text">Il ranking viene azzerato ogni notte, per cui ogni risveglio è un nuovo inizio</string>
     <string name="faq_vsm_title">Precauzioni</string>
-    <string name="faq_vsm_text">Assicurati, prima di rimuovere la cover posteriore, di togliere il MiKey !</string>
+    <string name="faq_vsm_text">Assicurati di togliere il MiKey prima di rimuovere la cover posteriore!</string>
+    <string name="hint_long_press_del">Long press per eliminare</string>
+    <string name="hint_mikey_sprite">"Premi MiKey per eseguire molte operazioni come 
+invio di audio, scattare foto, giocare... 
+Utilizzando MiKey per alcune funzioni non sarà possibile utilizzare i tasti per certe operazioni"</string>
+    <string name="enable_mikey_sprite">Apri Wizard</string>
+    <string name="disable_mikey_sprite">Scollega Wizard</string>
+    <string name="dialog_title_disable_mikey_sprite">Confermare scollegamento di Wizard?</string>
+    <string name="splash_mikey_sprite">"Tocca un punto qualsiasi dello schermo
+e premi MiKey"</string>
 </resources>
