Preogress with AntiFake (not completed)

--- a/Italian/main/AntiFake.apk/res/values-it/strings.xml
+++ b/Italian/main/AntiFake.apk/res/values-it/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--This Italian translation is licenced under www.creativecommons.org/licenses/by-nc-nd/3.0/deed.en by MIUI Italia www.miui.it-->
 <resources>
     <string name="app_name">Mi Anti-fake</string>
     <string name="action_settings">Impostazioni</string>
@@ -27,35 +28,35 @@
     <string name="detail_info_sell_time">Data di vendita</string>
     <string name="detail_info_serial_number">Seriale</string>
     <string name="detail_info_guarantee_time">Data garanzia</string>
-    <string name="detail_info_buy_channel">Canale d vendita</string>
-    <string name="detail_info_service_record">The official maintenance records</string>
-    <string name="error_denifiton">The channel does not support</string>
-    <string name="error_timeout">Read data timeout</string>
-    <string name="error_noconnection">Network problem, please check your network connection</string>
-    <string name="error_authfailure">Authentication failure</string>
-    <string name="error_network">Network Error</string>
-    <string name="unknown_error">Unknown error</string>
-    <string name="useless_network">Sorry, your network is currently unavailable.</string>
-    <string name="please_set_network">Please set up a network</string>
-    <string name="set_network">Set Network</string>
+    <string name="detail_info_buy_channel">Canale di vendita</string>
+    <string name="detail_info_service_record">Registri di manutenzione ufficiali</string>
+    <string name="error_denifiton">Canale non supportato</string>
+    <string name="error_timeout">Tempo di lettura dati scaduto</string>
+    <string name="error_noconnection">Problema di rete, controllare la connessione</string>
+    <string name="error_authfailure">Errore di autenticazione</string>
+    <string name="error_network">Errore di rete</string>
+    <string name="unknown_error">Errore sconosciuto</string>
+    <string name="useless_network">Spiacente, la rete è momentaneamente non disponibile.</string>
+    <string name="please_set_network">Imposta una rete</string>
+    <string name="set_network">Imposta rete</string>
     <string name="sure">OK</string>
-    <string name="retry">Retry</string>
-    <string name="cancel">Cancel</string>
-    <string name="exist">Exit</string>
-    <string name="label_error_msg">Error Messages</string>
+    <string name="retry">Riprova</string>
+    <string name="cancel">Annulla</string>
+    <string name="exist">Esci</string>
+    <string name="label_error_msg">Messaggi di errore</string>
     <string name="bottom_animation_interval_time">390</string>
-    <string name="call_phone">Call Advisory</string>
-    <string name="search_road">Find a travel route</string>
-    <string name="share_content_first">My Xiaomi is genuine, you can try, go to the official website to download Xiaomi：http://cli.im/4KUuS</string>
-    <string name="share_content_second">Xiaomi identification can identify the authenticity of Xiaomi phone, I just tried really good, I buy Xiaomi phone is genuine. Go Xiaomi official website to download：http://cli.im/4KUuS</string>
-    <string name="base">Basic Information</string>
-    <string name="storage">Storage</string>
+    <string name="call_phone">Chiama consulenza</string>
+    <string name="search_road">Trova una strada</string>
+    <string name="share_content_first">Il mio dispositivo Xiaomi è autentico, puoi provare a scaricare AntiFake in italiano da questo link: http://www.miui.it/download-applicazioni-xiaomi/</string>
+    <string name="share_content_second">"Xiaomi AntiFake può identificare l'autenticità di un telefono Xiaomi, ho appena provato e funziona benissimo, ho acquistato un telefono Xiaomi originale! Puoi scaricarle l'app da http://www.miui.it/download-applicazioni-xiaomi/"</string>
+    <string name="base">Informazioni di base</string>
+    <string name="storage">Memoria</string>
     <string name="cpu">CPU</string>
-    <string name="display">Show</string>
-    <string name="camera">Camera</string>
-    <string name="sensors">Sensors</string>
-    <string name="find_new_version">Discover new version</string>
-    <string name="download_in_mobile">You are currently using the data network, download the new version may generate some traffic, whether to download immediately?？</string>
+    <string name="display">Mostra</string>
+    <string name="camera">Fotocamera</string>
+    <string name="sensors">Sensori</string>
+    <string name="find_new_version">Cerca nuova versione</string>
+    <string name="download_in_mobile">Stai utilizzando la rete dati, il download della nuova versione potrebbe consumare traffico dati, vuoi scaricare comunque adesso?</string>
     <string name="tip_detail_address">Province, city, district, street names or street address, house number, not less than five words</string>
     <string name="tip_help_adults">Please fill in your contact information, we will get through the phone contact you to assist you with rights and selling businesses to investigate, and if the information you provide is true, we will, as appropriate, given certain incentives.</string>
     <string name="tip_input_complete">Please enter complete information</string>
@@ -103,13 +104,13 @@
     <string name="update_right_now">Upgrade Now</string>
     <string name="download_right_now">Download Now</string>
     <string name="tip_update_failed">Automatic upgrade fails</string>
-    <string name="msg_update_failed">Go http://www.miui.com/jianding/ Manually download the latest version</string>
-    <string name="tip_no_sdcard">Please install the SD card</string>
-    <string name="msg_no_sdcard">Software upgrade requires SD card, run again after installation</string>
+    <string name="msg_update_failed">"Visita http://www.miui.it/download-applicazioni-xiaomi/ e scrica manualmente l'ultima versione"</string>
+    <string name="tip_no_sdcard">Installa la scheda SD</string>
+    <string name="msg_no_sdcard">!L?aggiornamento richiede la scheda SD, avvia di nuovo dopo l'installazione"</string>
     <string name="public_beta">Beta</string>
-    <string name="tip_unsupport_device_mode">The device does not support</string>
-    <string name="msg_unsupport_device_mode">Yet for Xiaomi and Xiaomi flat TVs do optimization, so I do not support your current device.</string>
-    <string name="tip_uninstall">Uninstall Tips</string>
-    <string name="tip_uninstall_msg">Old Mi Identification app detected, you need to uninstall it before running the official version</string>
-    <string name="uninstall">Immediately uninstall</string>
+    <string name="tip_unsupport_device_mode">Il dispositivo non la supporta</string>
+    <string name="msg_unsupport_device_mode">Sono ancora necessarie delle ottimizzazione per le Xiaomi TV, pe ril momento non supporto il tuo dispositivo.</string>
+    <string name="tip_uninstall">Suggerimenti per la disinstallazione</string>
+    <string name="tip_uninstall_msg">"E' stata rilevata una vecchia versione di AntiFake, devi disinstallarla prima di avviare la nuova verisone"</string>
+    <string name="uninstall">Disinstalla subito</string>
 </resources>
