--- a/Italian/main/IRremote.apk/res/values-it/strings.xml
+++ b/Italian/main/IRremote.apk/res/values-it/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--This Italian translation is licenced under www.creativecommons.org/licenses/by-nc-nd/3.0/deed.en by MIUI Italia www.miui.it-->
 <resources>
     <string name="app_name">Xiaomi Rmote Controller</string>
     <string name="hello_world">Ciao, mondo!</string>
