--- a/Italian/main/framework-res.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/framework-res.apk/res/values-it-rIT/strings.xml
@@ -1058,7 +1058,7 @@ Vuoi chiuderla?"</string>
     <string name="volume_alarm">Volume allarme</string>
     <string name="volume_notification">Volume notifiche</string>
     <string name="volume_unknown">Volume</string>
-    <string name="volume_icon_description_bluetooth">Volume Bluetooth</string>
+    <string name="volume_icon_description_bluetooth">Bluetooth</string>
     <string name="volume_icon_description_ringer">Suoneria</string>
     <string name="volume_icon_description_incall">Chiamate</string>
     <string name="volume_icon_description_media">Media</string>
