--- a/Italian/main/AntiFake.apk/res/values-it/strings.xml
+++ b/Italian/main/AntiFake.apk/res/values-it/strings.xml
@@ -45,7 +45,7 @@
     <string name="exist">Esci</string>
     <string name="label_error_msg">Messaggi di errore</string>
     <string name="bottom_animation_interval_time">390</string>
-    <string name="call_phone">Chiama consulenza</string>
+    <string name="call_phone">Chiama assistenza</string>
     <string name="search_road">Trova una strada</string>
     <string name="share_content_first">Il mio dispositivo Xiaomi è autentico, puoi provare a scaricare AntiFake in italiano da questo link: http://www.miui.it/download-applicazioni-xiaomi/</string>
     <string name="share_content_second">"Xiaomi AntiFake può identificare l'autenticità di un telefono Xiaomi, ho appena provato e funziona benissimo, ho acquistato un telefono Xiaomi originale! Puoi scaricarle l'app da http://www.miui.it/download-applicazioni-xiaomi/"</string>
@@ -57,59 +57,58 @@
     <string name="sensors">Sensori</string>
     <string name="find_new_version">Cerca nuova versione</string>
     <string name="download_in_mobile">Stai utilizzando la rete dati, il download della nuova versione potrebbe consumare traffico dati, vuoi scaricare comunque adesso?</string>
-    <string name="tip_detail_address">Province, city, district, street names or street address, house number, not less than five words</string>
-    <string name="tip_help_adults">Please fill in your contact information, we will get through the phone contact you to assist you with rights and selling businesses to investigate, and if the information you provide is true, we will, as appropriate, given certain incentives.</string>
-    <string name="tip_input_complete">Please enter complete information</string>
-    <string name="capture_tip">Please scan the bar code placed within the frame</string>
-    <string name="tip_set_cpu_modle">"Keep your current phone's operating mode is set to performance mode, otherwise it will seriously affect the accuracy of the identification results."</string>
-    <string name="tip_skip_set_cpu_modle">Skip this step</string>
-    <string name="tip_contact">Your contact information:</string>
-    <string name="tip_name">Name</string>
-    <string name="tip_chenghu">Your name</string>
-    <string name="tip_phone">Phone</string>
-    <string name="tip_contact_msg">Your contact information</string>
-    <string name="tip_seller_msg">Selling business information:</string>
-    <string name="tip_seller_name">Business Name</string>
-    <string name="tip_seller_phone">Business phone</string>
-    <string name="commit">Submit to get help</string>
-    <string name="near_last_center">Sales centre nearest you:</string>
-    <string name="set_cpu_mode">This is a very important step</string>
-    <string name="mobile_set_cpu_mode">Manually set the operation mode</string>
-    <string name="xiaomi_checker">Mi identification</string>
-    <string name="tip_loading">Loading, please wait</string>
+    <string name="tip_detail_address">Provincia, città, regione, nome della via, numero civino, non meno di 5 parole</string>
+    <string name="tip_help_adults">Si prega di inserire le tue informazioni di contatto, ti contateremo telefonicamente per assisterti con i diritti e i venditori per investigare, e se le informazioni che fornisci sono vere, provvederemo, quando appropriato, certi incentivi.</string>
+    <string name="tip_input_complete">Si prega di inserire le informazioni complete</string>
+    <string name="capture_tip">Si prega di scansione il codice a barre posizionandolo dentro la cornice</string>
+    <string name="tip_set_cpu_modle">"Mantiere il profilo atuale del tuo telefono in Alte prestazioni, altrimenti potrebbe seriamente compromettere l'accuratezza dei risultati di identificazione"</string>
+    <string name="tip_skip_set_cpu_modle">Salta questo passaggio</string>
+    <string name="tip_contact">Tue info di contatto:</string>
+    <string name="tip_name">Nome</string>
+    <string name="tip_chenghu">Il tuo nome</string>
+    <string name="tip_phone">Telefono</string>
+    <string name="tip_contact_msg">Informazioni per contattarti</string>
+    <string name="tip_seller_msg">Informazione sul venditore:</string>
+    <string name="tip_seller_name">Nome azienda</string>
+    <string name="tip_seller_phone">Telefono azienda</string>
+    <string name="commit">Invia per ottenere aiuto</string>
+    <string name="near_last_center">Centro vendite a te più vicino:</string>
+    <string name="set_cpu_mode">Questo è un passaggio molto importante</string>
+    <string name="mobile_set_cpu_mode">Imposta manualmente la modalità operativa</string>
+    <string name="xiaomi_checker">Identificazione Mi</string>
+    <string name="tip_loading">Caricamento, prego attendere</string>
     <string name="xiaomi_name">Beijing Xiaomi Mobile Software Co., Ltd.</string>
-    <string name="tai">台</string>
-    <string name="alread_check_num">Have been identified</string>
-    <string name="copycat_num">Fake Xiaomi</string>
-    <string name="tip_update">The new version is found to be updated?</string>
-    <string name="tip_error_username">Please enter your name correctly</string>
-    <string name="tip_error_phone">Please enter the correct phone</string>
-    <string name="tip_error_seller_name">Please enter the correct business name</string>
-    <string name="tip_error_seller_phone">Please enter the correct business phone</string>
-    <string name="tip_error_seller_address">Please enter the address correctly</string>
-    <string name="restart_app">Restart</string>
-    <string name="title_error_token">Failure to verify information</string>
-    <string name="msg_error_token">In order to ensure the accuracy of the data, you can restart the client again.</string>
-    <string name="tip_feedback_success">Feedback success</string>
-    <string name="msg_feedback_success">We have received your request for assistance rights, we will verify the information you provided, we will later verified with the local business sector and selling businesses for the corresponding investigation. Thanks for your support!</string>
-    <string name="tip_charge_up_battery">Charging tips</string>
-    <string name="charge_up_battery">In order to ensure the accuracy of identification, please ensure that the phone battery is greater than 50%, please connect the charger</string>
-    <string name="tip_unsupport_device">The current system does not support your device</string>
-    <string name="msg_unsupport_device">Since January 1, 2013, the company manufactured equipment Xiaomi preset systems support the software, if you recently purchased this device, it may be fake. Please pay more precautions!</string>
-    <string name="tip_skip_set_cpu_model">Really want to skip it?</string>
-    <string name="msg_skip_set_cpu_model">The current device is still in the non-performance mode, if Skip could seriously affect the accuracy of test results.</string>
-    <string name="skip_right_now">Skip Now</string>
-    <string name="tip_update_right_now">Please upgrade immediately</string>
-    <string name="msg_update_right_now">The current version has been unavailable, please upgrade immediately</string>
-    <string name="update_right_now">Upgrade Now</string>
-    <string name="download_right_now">Download Now</string>
-    <string name="tip_update_failed">Automatic upgrade fails</string>
+    <string name="tai">Taiwan</string>
+    <string name="alread_check_num">Identificazione effettuata</string>
+    <string name="copycat_num">Xiaomi falso</string>
+    <string name="tip_update">Nuova versione disponibile, aggiornare?</string>
+    <string name="tip_error_username">Si prega di inserire il nome correttamente</string>
+    <string name="tip_error_phone">Si prega di inserire il numero di telefono correttamente</string>
+    <string name="tip_error_seller_name">"Si prega di inserire il nome dell'azienda correttamente"</string>
+    <string name="tip_error_seller_phone">"Si prega di inserire il numero dell'azienda correttamente"</string>
+    <string name="tip_error_seller_address">"Si prega di inserire l'indirizzo correttamente"</string>
+    <string name="restart_app">Riavvia</string>
+    <string name="title_error_token">Impossibile verificare le informazioni</string>
+    <string name="msg_error_token">"Per assicurare l'accuratezza dei dati, puoi riavviare l'app di nuovo."</string>
+    <string name="tip_feedback_success">Feedback inviato</string>
+    <string name="msg_feedback_success">"Abbiamo ricevuto la tua richiesta di assistenza, verificheremo le informazioni che ci hai fornito, in seguito effettueremo delle verifiche con l'ufficio affari di zona e l'ufficio vendite ed effettueremo le investigazioni del caso. Grazie per il tuo supporto!"</string>
+    <string name="tip_charge_up_battery">Suggerimento sulla batteria</string>
+    <string name="charge_up_battery">"Per assicurare l'accuratezza dell'identificazione, assicurati che la batteria del telefono sia carica almeno al 50%, si prega di collegare il caricabatteria"</string>
+    <string name="msg_unsupport_device">A partire dal 1 gennaio 2013, i dispositivi prodotti da Xiaomi sono dotati di fabbrica di un sistema che supporta questo software, se hai comprato questo dispositivo di recente, potrebbe essere un falso. Si prega di prendere maggiori precauzioni!</string>
+    <string name="tip_skip_set_cpu_model">Desideri davvero saltare il passaggio?</string>
+    <string name="msg_skip_set_cpu_model">"Il dispositivo attuale non è attualmente in modalità Alte prestazioni, se salti il passaggio potersti seriamente compromettere l'accuratezza dei risultati del test."</string>
+    <string name="skip_right_now">Salta ora</string>
+    <string name="tip_update_right_now">Si prega di aggiornare immediatamente</string>
+    <string name="msg_update_right_now">La versione attuale non è più disponibile, si prega di aggiornare immediatamente</string>
+    <string name="update_right_now">Aggiorna ora</string>
+    <string name="download_right_now">Scarica ora</string>
+    <string name="tip_update_failed">Aggiornamento automatico fallito</string>
     <string name="msg_update_failed">"Visita http://www.miui.it/download-applicazioni-xiaomi/ e scrica manualmente l'ultima versione"</string>
-    <string name="tip_no_sdcard">Installa la scheda SD</string>
-    <string name="msg_no_sdcard">!L?aggiornamento richiede la scheda SD, avvia di nuovo dopo l'installazione"</string>
+    <string name="tip_no_sdcard">Inserisci una scheda SD</string>
+    <string name="msg_no_sdcard">"L'aggiornamento richiede la scheda SD, avvia di nuovo dopo l'installazione"</string>
     <string name="public_beta">Beta</string>
     <string name="tip_unsupport_device_mode">Il dispositivo non la supporta</string>
-    <string name="msg_unsupport_device_mode">Sono ancora necessarie delle ottimizzazione per le Xiaomi TV, pe ril momento non supporto il tuo dispositivo.</string>
+    <string name="msg_unsupport_device_mode">Sono ancora necessarie delle ottimizzazione per le TV Xiaomi, per il momento il tuo dispositivo non è supportato.</string>
     <string name="tip_uninstall">Suggerimenti per la disinstallazione</string>
     <string name="tip_uninstall_msg">"E' stata rilevata una vecchia versione di AntiFake, devi disinstallarla prima di avviare la nuova verisone"</string>
     <string name="uninstall">Disinstalla subito</string>
